--- a/login_page/package.json
+++ b/login_page/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.11",
     "sass": "^1.89.0",
     "web-vitals": "^2.1.4"
   },
